--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
-body {
-    background-color: green;
+html, body {
+    box-sizing: border-box;
+    height: 100%;
+   
+}
+
+ul {
+    display: flex;
+    gap: 15px;
+}
+
+li.logo {
+    flex-grow: 1;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
