--- a/style.css
+++ b/style.css
@@ -20,3 +20,12 @@ li {
 a {
     text-decoration: none;
 }
+
+.rectangle {
+height: 200px;
+width: 300px;
+background-color: orange;
+display: flex;
+justify-content: center;
+align-items: center;
+}
