properly align the hero content and change the hero sign up tag to button

--- a/style.css
+++ b/style.css
@@ -23,9 +23,20 @@ a {
 
 .rectangle {
 height: 200px;
-width: 300px;
+width: 600px;
 background-color: orange;
 display: flex;
 justify-content: center;
 align-items: center;
+}
+
+.hero {
+    display: flex;
+    margin-top: 80px;
+}
+
+.hero button {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
 }
