--- a/style.css
+++ b/style.css
@@ -40,3 +40,44 @@ align-items: center;
     border: none;
     border-radius: 5px;
 }
+
+h2 {
+    text-align: center;
+}
+
+.body_content {
+    background-color: black;
+    color: white;
+   
+}
+
+.img_container {
+    display: flex;
+   justify-content: center;
+    gap: 20px;
+    background-color: blue;
+    padding: 50px;
+}
+
+.image {
+    background-color: green;
+    width: 150px;
+    height: 100px;
+    border-radius: 10px;
+
+}
+
+.image4 {
+    background-color: purple;
+}
+
+.smaller_img_container {
+    background-color: orange; 
+    border-radius: 10px;
+    justify-content: center;
+    width: 150px;
+}
+
+.smaller_img_container p {
+    text-align: center;
+}
