--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ align-items: center;
 margin-right: 50px;
 }
 
+
+
 .hero {
     display: flex;
     margin-top: 80px;
@@ -76,12 +78,12 @@ h2 {
 
 }
 
-.image4 {
+/* .image4 {
     background-color: purple;
-}
+} */
 
 .smaller_img_container {
-    background-color: orange; 
+    /* background-color: orange;  */
     border-radius: 10px;
     justify-content: center;
     width: 150px;
@@ -89,4 +91,22 @@ h2 {
 
 .smaller_img_container p {
     text-align: center;
+    margin-top: 9px;
+}
+
+.body_content_2 {
+    display: flex;
+    flex-direction: column;
+    
+    background-color: pink;
+    font-size: 20px;    
+    padding: 30px 360px 0px 360px;
+    font-style: italic;
+    
+}
+
+.author {
+    
+    margin-left: auto;
+    margin-right: 20px;
 }
