--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ html, body {
    
 }
 
+/* body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+} */
+
 ul {
     display: flex;
     gap: 15px;
@@ -109,4 +115,30 @@ h2 {
     
     margin-left: auto;
     margin-right: 20px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    
+    margin-bottom: 550px;
+}
+
+.call_to_action {
+    /* flex-grow: 1; */
+    display: flex;
+   justify-content: space-between;
+    background-color: purple;
+    padding: 70px;
+    margin: 100px;
+    border-radius: 5px;
+}
+
+footer button {
+    background-color: green;
+    padding: 10px 40px 10px 40px;
+    border-radius: 5px;
+    border-style: none;
+    margin: 40px;
+    margin-top: 20px;
 }
